@@ -1,12 +1,14 @@
 {
   "450001712305143869": {
     "name": "Colin",
-    "target": "450001712305143869",
-    "current_word": "tested",
-    "bet": 50,
-    "remaining_msgs": 96,
-    "used_words": [],
-    "gamestatus": 1
+    "target": "",
+    "current_word": "",
+    "bet": 0,
+    "remaining_msgs": "",
+    "used_words": [
+
+    ],
+    "gamestatus": 0
   },
   "497803559144914944": {
     "name": "Andrew",
@@ -14,7 +16,9 @@
     "current_word": "",
     "bet": 0,
     "remaining_msgs": "",
-    "used_words": [],
+    "used_words": [
+ 
+    ],
     "gamestatus": 0
   },
   "499328039621230592": {
