@@ -1,1 +1,1 @@
-{"450001712305143869":{"name":"Colin","gbp":7605.25,"achievements":[10,12,19,22,30,13,4,5,14,6,3,18,21,23,1,2,25,26,8,15,24]},"497803559144914944":{"name":"Andrew","gbp":-55,"achievements":[11,20]},"499328039621230592":{"name":"Wyatt","gbp":370,"achievements":[11,16]},"463080062175019010":{"name":"Ian","gbp":500,"achievements":[]},"210861925771247636":{"name":"Zaid","gbp":500,"achievements":[]},"501929393401364481":{"name":"Mike","gbp":500,"achievements":[]},"509430603339399186":{"name":"Brian","gbp":500,"achievements":[]},"526190184455471105":{"name":"Carl","gbp":500,"achievements":[]},"462798271195119626":{"name":"Alex","gbp":500,"achievements":[]},"562203622474252288":{"name":"Dylan","gbp":500,"achievements":[]},"501887537451630593":{"name":"Ramzi","gbp":500,"achievements":[]},"434471986748456962":{"name":"Chrisvan","gbp":500,"achievements":[]},"497861779020578837":{"name":"Hayden","gbp":500,"achievements":[]},"501930484838957069":{"name":"Tom","gbp":500,"achievements":[]},"581903756111773716":{"name":"Justin","gbp":500,"achievements":[]},"508076579684089896":{"name":"Jacob","gbp":500,"achievements":[]},"525147400176664626":{"name":"Teddy","gbp":500,"achievements":[]},"640368746690510868":{"name":"Slim","gbp":500,"achievements":[]},"498262864541515786":{"name":"Derek","gbp":509,"achievements":[30]}}
+{"450001712305143869":{"name":"Colin","gbp":70,"achievements":[10,12,19,22,30,13,4,5,14,6,3,18,21,23,1,2,25,26,8,15,24]},"497803559144914944":{"name":"Andrew","gbp":100,"achievements":[11,20]},"499328039621230592":{"name":"Wyatt","gbp":370,"achievements":[11,16]},"463080062175019010":{"name":"Ian","gbp":500,"achievements":[]},"210861925771247636":{"name":"Zaid","gbp":500,"achievements":[]},"501929393401364481":{"name":"Mike","gbp":500,"achievements":[]},"509430603339399186":{"name":"Brian","gbp":500,"achievements":[]},"526190184455471105":{"name":"Carl","gbp":500,"achievements":[]},"462798271195119626":{"name":"Alex","gbp":500,"achievements":[]},"562203622474252288":{"name":"Dylan","gbp":500,"achievements":[]},"501887537451630593":{"name":"Ramzi","gbp":500,"achievements":[]},"434471986748456962":{"name":"Chrisvan","gbp":500,"achievements":[]},"497861779020578837":{"name":"Hayden","gbp":500,"achievements":[]},"501930484838957069":{"name":"Tom","gbp":500,"achievements":[]},"581903756111773716":{"name":"Justin","gbp":500,"achievements":[]},"508076579684089896":{"name":"Jacob","gbp":500,"achievements":[]},"525147400176664626":{"name":"Teddy","gbp":500,"achievements":[]},"640368746690510868":{"name":"Slim","gbp":500,"achievements":[]},"498262864541515786":{"name":"Derek","gbp":544,"achievements":[30]}}
